--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "nodemon server/index.js",
-    "dev-server": "node-env-run server --exec nodemon | pino-colada",
-    "dev": "run-p server start dev-server "
+    "dev": "run-p server start"
   },
   "eslintConfig": {
     "extends": "react-app"
